# contract-guard

./: .env.example  .gitignore  00-README.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  docker-compose.yml  package.json  pyproject.toml  verify-v12-closure.js
01-business/: 产品定位.md  商业模式.md  商业计划书.md  市场需求分析.md  收费模式与成本风控.md  竞争分析.md  财务预测.md
02-product/: PRD.md  前端页面状态机与异常流.md  原型设计说明.md  双屏对比与差异可视化设计.md  用户画像.md
03-agent/: AGENTS.md  Agent协作协议.md  Agent职责划分.md  Agent评测标准.md  为什么不使用LangChain-自研方案说明.md  前端接管交接说明.md  工具调用规范.md  系统提示词设计.md  评测框架.md  起草审查闭环与Annotation桥.md
04-technical/: API与Schema固定契约.md  LLM Unified Wrapper Layer Design.md  安全设计.md  技术选型.md  接口设计.md  数据库种子数据与测试夹具设计.md  数据库设计.md  系统架构设计.md  错误码与失败处理设计.md
05-ai-coding/: 编码规范.md
06-project/: WBS工作分解.md  执行计划.md  项目章程.md  风险管理.md
07-testing/: draft-review-closure-2026-06-23.md  draft-review-verification.md  frontend-detail-page-smoke-2026-06-23.md  frontend-v12-light-closure-2026-06-23.md  web-frontend-verification-checklist.md  测试资产清单与规范.md  验收标准.md  黄金样例与测试夹具.md
08-impl-spec/: 01-project-structure.md  02-agent-framework.md  03-state-machine.md  04-api-supplement.md  05-integration.md  README.md  START-HERE.md  实现规格说明书模板.md
backend/: =5.0.0  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  contracts.py  health.py  reviews.py  router.py  ws.py
backend/app/core/: exceptions.py
backend/app/db/: models.py  session.py
backend/app/llm/: __init__.py  client.py  config.py  exceptions.py
backend/app/schemas/: api.py  errors.py
backend/app/services/: auth.py  contract.py  draft.py  parser.py  queue.py  rag.py  review.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260617_0001_phase0_initial.py  20260618_0002_phase1_reviews.py  20260619_0003_phase3_law_articles.py  20260623_0004_add_draft_fields.py  20260623_0005_add_reviewed_draft.py
backend/scripts/: check_draft_data.py  clean_test_drafts.py
backend/tests/: conftest.py  test_auth.py  test_contracts.py  test_draft.py  test_draft_review.py  test_health.py  test_llm_client.py  test_parser.py  test_rag.py  test_review_service.py  test_reviews.py  test_ws.py
configs/: prometheus.yml
frontend/: CONTRACT_DETAIL_FIX_VERIFICATION.md  ContractDetailPage_收口清理完成报告.md  Dockerfile.dev  P0_P1_完成报告.md  P2_ContractDetailPage_最终收口完成报告.md  P2_编辑能力口径修正完成报告.md  Phase3_串页修复完成报告.md  index.html  package-lock.json  package.json  串页修复验证手册.md
(+75 files in other folders)
