[project]
name = "contractguard"
version = "1.0.0"
description = "ContractGuard — Intelligent Contract Risk Review System"
requires-python = ">=3.11"
readme = "00-README.md"
license = { text = "MIT" }
authors = [
    { name = "melonelish", email = "melonelish@163.com" }
]
keywords = ["contract-review", "legal-ai", "rag", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "elasticsearch>=8.13.0",
    "pymilvus>=2.4.0",
    "minio>=7.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx-ws>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
